--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/montserrat": "^5.0.18",
     "@mui/icons-material": "^5.16.4",
     "@react-three/drei": "^9.108.1",
