--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
