--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@fontsource/montserrat": "^5.0.18",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/x-data-grid": "^7.18.0",
+    "@mui/x-date-pickers": "^7.18.0",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
