--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.77.8",
     "scheduler": "^0.23.2",
     "styled-components": "^6.1.11",
+    "sweetalert2": "^11.14.3",
     "three": "^0.166.0",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
