--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@toolpad/core": "latest",
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
