--- a/package.json
+++ b/package.json
@@ -19,18 +19,22 @@
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "latest",
     "axios": "^1.7.5",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-validation": "^3.0.7",
+    "react-zoom-pan-pinch": "^3.6.1",
     "sass": "^1.77.8",
     "scheduler": "^0.23.2",
     "styled-components": "^6.1.11",
