--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-date-pickers": "^7.22.1",
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "moment": "^2.30.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
@@ -37,6 +39,8 @@
     "react-zoom-pan-pinch": "^3.6.1",
     "sass": "^1.77.8",
     "scheduler": "^0.23.2",
+    "socket.io-client": "^4.8.1",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.14.3",
     "three": "^0.166.0",
