--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.5.1",
     "moment": "^2.30.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
@@ -35,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-validation": "^3.0.7",
     "react-zoom-pan-pinch": "^3.6.1",
     "sass": "^1.77.8",
@@ -43,6 +45,7 @@
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.11",
     "sweetalert2": "^11.14.3",
+    "swiper": "^8.4.7",
     "three": "^0.166.0",
     "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
