--- a/.env_copy
+++ b/.env_copy
@@ -8,3 +8,4 @@ REACT_APP_EMAILJS_TEMPLATE_ID=your_template_id
 REACT_APP_EMAILJS_TEMPLATE_ID2=your_template_id2
 REACT_APP_EMAILJS_USER_ID=your_user_id
 REACT_APP_EMAIL_ADMIN=email_admin
+GENERATE_SOURCEMAP=false
