--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
     "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
